--- a/index[1].html
+++ b/index[1].html
@@ -178,7 +178,6 @@
 
 <body>
   <div class="wrapper">
-
     <div class="row" id="header#html5style2header">
       <div class="col-12">
         <img class="logo" src="img/flexy-logo.png">
@@ -202,86 +201,22 @@
         </nav>
       </div><!-- col-12 -->
     </div><!-- end-.row -->
-    <br class="clear">
+    <!-- <br class="clear"> -->
+    <div id="container">
 
-    <div class="row">
-      <div class="çol-12">
-        <img src="img/kite.png" ;>       
-      </div>
-    </div><!-- end-.row -->
-
-    <div class="row">
-      <div class="çol-12" padding="2%">
-        <h2 class="dark">Welcome to Flexy</h2>
-        <p id="intro">
-          <!-- Welcome to --> <strong>StarTrackr!</strong> the planet's premier celebrity tracking and monitoring
-          service.
-          Need to know where in the world the best bands, musicians or producers are within 2.2 square meters? You've
-          come
-          to the right place. We have a very special special on B-grade celebs this week, so hurry in!
-        </p>
-      </div><!-- end-col-12 -->
-    </div><!-- end-row -->
-    <br class="clear">
-
-    <div class="row" style="background-color: #3C8886; padding: 5% 0 3%;">
-      <div class="çol-12">
-        <img src="img/paper.png" ;>
-
-        <p id="no-script">
-          We recommend that you have JavaScript enabled!
-        </p>
-
-        <p id="disclaimer">
-          Disclaimer! This service is not intended for the those with criminal intent. Celebrities are kind of like
-          people
-          so their privacy should be respected.
-        </p>
-      </div><!-- end-col-12 -->
-    </div><!-- end-row -->
-    <br class="clear">
-
-    <div class="row" style="background-color: #f6931e;">
-      <div class="col-11">
-        <h2>Get ready for take off.</h2>
-
-        <div id="news">
-          <h2>Latest News</h2>
-          <p>
-            Which member of the seminal calypso/lectro band <em>C&amp;C Music Sweatshop</em> was spotted last night at
-            <em>Dirt</em>, the trendy New York restaurant that serves only food caught and retrieved by the chef's own
-            hands?
-            <span class="spoiler">Yes! It's the ever-effervescent, <em>Glendatronix</em>!</span>
-          </p>
-          <p>Who lost their recording contract today? <span class="spoiler">The Zaxntines!</span></p>
+      <div class="row">
+        <div class="çol-12">
+          <img src="img/kite.png" ;>
         </div>
-      </div><!-- end col-11 -->
-    </div> <!-- end class row -->
+      </div><!-- end-.row -->
 
-    <div class="row" style="background-color: #1abc9c;">
-      <div class="col-11">
-        <div class="col-3">
-          <img class="circle" src="img/orange-globe.png">
-        </div> <!-- end col-3 -->
-      </div><!-- end col-11 -->
-    </div> <!-- end class row -->
+      <div class="row">
+        <div class="çol-12" padding="2%">
+          <h2 class="dark">Welcome to Flexy</h2>
+        </div><!-- end-col-12 -->
+      </div><!-- end-row -->
 
-    <div class="row" style="background-color: #1abc9c;">
-      <div class="col-10">
-        <h2>We're flying around the globe</h2>
-      </div>
-      <div class="col-3">
-        <img id="waves" class="circle" src="images/waves.png">
-      </div><!-- end col-3 -->
-    </div>
-
-    <div class="row" style="background-color: #e5ef3f;">
-      <div class="col-9">
-        <h2>Above the clouds &amp; over the sea.</h2>
-      </div>
-      <div class="col-3">
-        <img id="plane" class="circle" src="images/plane.png">
-        <div id="navigation">
+      <div id="navigation">
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">Buy Now!</a></li>
@@ -289,147 +224,191 @@
           <li><a href="#">Gift Ideas</a></li>
         </ul>
       </div>
-      </div><!-- end col-3 -->
-    </div>
 
-    <div class="row" style="background-color: #34495e;">
-      <div class="col-8">
-        <h2>In just 42 hours and 27 minutes</h2>
-
-        <div class="col-3">
-          <img id="paper-blue" class="circle" src="images/paper-blue.png">
-        </div><!-- end col-3 -->
+      <div class="row" style="background-color: #3C8886; padding: 5% 0 3%;">
+        <div class="çol-12">
+          <img src="img/paper.png" ;>
+        </div><!-- end-col-12 -->
         <p id="intro">
-        Welcome to <strong>StarTrackr!</strong> the planet's premier celebrity tracking and monitoring service. Need to know where in the world the best bands, musicians or producers are within 2.2 square meters? You've come to the right place. We have a very special special on B-grade celebs this week, so hurry in!
-      </p>
+          Welcome to <strong>StarTrackr!</strong> the planet's premier celebrity tracking and monitoring service. Need
+          to know where in the world the best bands, musicians or producers are within 2.2 square meters? You've come to
+          the right place. We have a very special special on B-grade celebs this week, so hurry in!
+        </p>
+
+      </div><!-- end-row -->
       <p id="no-script">
         We recommend that you have JavaScript enabled!
       </p>
-      <p id="disclaimer">
-        Disclaimer! This service is not intended for the those with criminal intent. Celebrities are kind of like people so their privacy should be respected.
-      </p>
-      </div><!-- end col-8 -->
-    </div>
 
+      <div class="row" style="background-color: #f6931e;">
+        <div class="col-11">
+          <h2>Get ready for take off.</h2>
+        </div><!-- end col-11 -->
+      </div> <!-- end class row -->
 
-    <div class="row" style="background-color: #00afe1;">
-      <div class="col-7">
-        <h2>So come along for the ride!</h2>
-        <div class="col-3">
-          <img id="globe" class="circle" src="images/globe.png" width="215px">
-          <div id="news">
-            <h2>Latest News</h2>
-            <p>
-              Which member of the seminal calypso/lectro band <em>C&amp;C Music Sweatshop</em> was spotted last night at
-              <em>Dirt</em>, the trendy New York restaurant that serves only food caught and retrieved by the chef's own
-              hands?
-              <span class="spoiler">Yes! It's the ever-effervescent, <em>Glendatronix</em>!</span>
+      <div class="row" style="background-color: #1abc9c;">
+        <div class="col-11">
+          <div class="col-3">
+            <img class="circle" src="img/orange-globe.png">
+            <p id="disclaimer">
+              Disclaimer! This service is not intended for the those with criminal intent. Celebrities are kind of like
+              people so their privacy should be respected.
             </p>
-            <p>Who lost their recording contract today? <span class="spoiler">The Zaxntines!</span></p>
-          </div>
-        </div><!-- end col-3 -->
-      </div><!-- end col-7 -->
-    </div>
+          </div> <!-- end col-3 -->
+        </div><!-- end col-11 -->
+      </div> <!-- end class row -->
 
-    <div class="row">
-      <div class="col-12" style="background-color: 66d4ff;">
-        <img id="plane-background" src="./img/plane-background.png" width="935px">
-      </div>
-      <div>
-        <h2 class="heading">Our Celebrities</h2>
-        <p class="info">
-          We have an ever changing roster of newly chipped celebrities. But it can take as little as a week for the
-          little critters to realise they've been tagged - so you have to be fast!
-        </p>
-        <table class="data" id="celebs">
-          <thead>
-            <tr>
-              <th>ID</th>
-              <th>Name</th>
-              <th>Occupation</th>
-              <th>Approx. Location</th>
-              <th>Price</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>203A</td>
-              <td>Johny Stardust (<a href="bio.pdf">bio</a>)</td>
-              <td>Front-man</td>
-              <td>Los Angeles</td>
-              <td>$39.95</td>
-            </tr>
-            <tr>
-              <td>141B</td>
-              <td>Beau Dandy (<a href="img.jpg">pic</a>,<a href="bio.pdf">bio</a>)</td>
-              <td>Singer</td>
-              <td>New York</td>
-              <td>$39.95</td>
-            </tr>
-            <tr>
-              <td>2031</td>
-              <td>Mo' Fat (<a href="img.jpg">pic</a>)</td>
-              <td>Producer</td>
-              <td>New York</td>
-              <td>$19.95</td>
-            </tr>
-            <tr>
-              <td>007F</td>
-              <td>Kellie Kelly (<a href="bio.pdf">bio</a>,<a href="w.doc">press</a>)</td>
-              <td>Singer</td>
-              <td>Omaha</td>
-              <td>$11.95</td>
-            </tr>
-            <tr>
-              <td>8A05</td>
-              <td>Darth Fader (<a href="img.jpg">pic</a>)</td>
-              <td>DJ</td>
-              <td>London</td>
-              <td>$19.95</td>
-            </tr>
-            <tr>
-              <td>6636</td>
-              <td>Glendatronix (<a href="bio.pdf">bio</a>,<a href="w.doc">press</a>)</td>
-              <td>Keytarist</td>
-              <td>London</td>
-              <td>$39.95</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-    </div>
-    <div class="row" style="background-color: 66d4ff">
-      <div class="col-12">
-        <h2>Follow Us</h2>
-      </div>
-      <div id="comment">
-        <h2>Leave a comment</h2>
-        name:<br />
-        <input type="text" /><br />
-        comment:<br />
-        <textarea rows="5" cols="30" name="comment"></textarea>
-      </div>
-    </div>
-
-    <div class="row" style="background-color: 66d4ff">
-      <div class="col-12">
-        <div id="footer">
-          <p>
-            &copy; Copyright 2010 CelebriTracker Productions
-          </p>
+      <div class="row" style="background-color: #1abc9c;">
+        <div class="col-10">
+          <h2>We're flying around the globe</h2>
+          <div class="col-3">
+            <img id="waves" class="circle" src="images/waves.png">
+            <div id="news">
+              <h2>Latest News</h2>
+              <p>
+                Which member of the seminal calypso/lectro band <em>C&amp;C Music Sweatshop</em> was spotted last night
+                at <em>Dirt</em>, the trendy New York restaurant that serves only food caught and retrieved by the
+                chef's own hands?
+                <span class="spoiler">Yes! It's the ever-effervescent, <em>Glendatronix</em>!</span>
+              </p>
+              <p>Who lost their recording contract today? <span class="spoiler">The Zaxntines!</span></p>
+            </div>
+          </div><!-- end col-3 -->
         </div>
       </div>
 
-      <ul class="social">
-        <li><a href="#"><i class="fa fa-facebook"></i></i></a></li>
-        <li><a href="#"><i class="fa fa-google-plus"></i></i></a></li>
-        <li><a href="#"><i class="fa fa-twitter"></i></i></a></li>
-        <li><a href="#"><i class="fa fa-youtube"></i></i></a></li>
-        <li><a href="#"><i class="instagram"></i></i></a></li>
-      </ul>
+      <div class="row" style="background-color: #e5ef3f;">
+        <div class="col-9">
+          <h2>Above the clouds &amp; over the sea.</h2>
 
-    </div>
-  </div><!-- end-wrapper -->
+          <div class="col-3">
+            <img id="plane" class="circle" src="images/plane.png">
+            <div>
+              <h2 class="heading">Our Celebrities</h2>
+              <p class="info">
+                We have an ever changing roster of newly chipped celebrities. But it can take as little as a week for
+                the little critters to realise they've been tagged - so you have to be fast!
+              </p>
+              <table class="data" id="celebs">
+                <thead>
+                  <tr>
+                    <th>ID</th>
+                    <th>Name</th>
+                    <th>Occupation</th>
+                    <th>Approx. Location</th>
+                    <th>Price</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>203A</td>
+                    <td>Johny Stardust (<a href="bio.pdf">bio</a>)</td>
+                    <td>Front-man</td>
+                    <td>Los Angeles</td>
+                    <td>$39.95</td>
+                  </tr>
+                  <tr>
+                    <td>141B</td>
+                    <td>Beau Dandy (<a href="img.jpg">pic</a>,<a href="bio.pdf">bio</a>)</td>
+                    <td>Singer</td>
+                    <td>New York</td>
+                    <td>$39.95</td>
+                  </tr>
+                  <tr>
+                    <td>2031</td>
+                    <td>Mo' Fat (<a href="img.jpg">pic</a>)</td>
+                    <td>Producer</td>
+                    <td>New York</td>
+                    <td>$19.95</td>
+                  </tr>
+                  <tr>
+                    <td>007F</td>
+                    <td>Kellie Kelly (<a href="bio.pdf">bio</a>,<a href="w.doc">press</a>)</td>
+                    <td>Singer</td>
+                    <td>Omaha</td>
+                    <td>$11.95</td>
+                  </tr>
+                  <tr>
+                    <td>8A05</td>
+                    <td>Darth Fader (<a href="img.jpg">pic</a>)</td>
+                    <td>DJ</td>
+                    <td>London</td>
+                    <td>$19.95</td>
+                  </tr>
+                  <tr>
+                    <td>6636</td>
+                    <td>Glendatronix (<a href="bio.pdf">bio</a>,<a href="w.doc">press</a>)</td>
+                    <td>Keytarist</td>
+                    <td>London</td>
+                    <td>$39.95</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div><!-- end col-3 -->
+        </div>
+      </div>
+
+      <div class="row" style="background-color: #34495e;">
+        <div class="col-8">
+          <h2>In just 42 hours and 27 minutes</h2>
+
+          <div class="col-3">
+            <img id="paper-blue" class="circle" src="images/paper-blue.png">
+            <div id="comment">
+              <h2>Leave a comment</h2>
+              name:<br>
+              <input type="text"><br>
+              comment:<br>
+              <textarea rows="5" cols="30" name="comment"></textarea>
+            </div>
+          </div><!-- end col-3 -->
+        </div><!-- end col-8 -->
+      </div>
+
+      <div class="row" style="background-color: #00afe1;">
+        <div class="col-7">
+          <h2>So come along for the ride!</h2>
+          <div class="col-3">
+            <img id="globe" class="circle" src="images/globe.png" width="215px">
+      <div class="row">
+        <div class="col-12" style="background-color: 66d4ff;">
+          <img id="plane-background" src="./img/plane-background.png" width="935px">
+        </div> 
+      </div>
+      
+      <div class="row" style="background-color: 66d4ff">
+        <div class="col-12">
+          <h2>Follow Us</h2>
+        </div>
+        <div id="comment">
+          <h2>Leave a comment</h2>
+          name:<br />
+          <input type="text" /><br />
+          comment:<br />
+          <textarea rows="5" cols="30" name="comment"></textarea>
+        </div>
+      </div>
+
+      <div class="row" style="background-color: 66d4ff">
+        <div class="col-12">
+          <div id="footer">
+            <p>
+              &copy; Copyright 2010 CelebriTracker Productions
+            </p>
+          </div>
+        </div>
+
+        <ul class="social">
+          <li><a href="#"><i class="fa fa-facebook"></i></i></a></li>
+          <li><a href="#"><i class="fa fa-google-plus"></i></i></a></li>
+          <li><a href="#"><i class="fa fa-twitter"></i></i></a></li>
+          <li><a href="#"><i class="fa fa-youtube"></i></i></a></li>
+          <li><a href="#"><i class="instagram"></i></i></a></li>
+        </ul>
+
+      </div>
+    </div><!-- end-wrapper -->
 </body>
 
 </html>
