--- a/index[1].html
+++ b/index[1].html
@@ -15,6 +15,21 @@
   <link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8" />
   <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
   <script type="text/javascript" src="./scripts.js"></script>
+  <link rel="stylesheet" href="./style[1].css">
+  <link rel="stylesheet" href="./nav[1].css">
+  <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+  <link rel="stylesheet" href="./font-awesome.min[1].css">
+  <link rel="stylesheet" href="../orris0/CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8">
+  <link rel="stylesheet" href="../../orris0/jQuery-novice-to-ninja/chapter_04/01_lightbox/lightbox.css" type="text/css" media="screen" charset="utf-8">
+  <link rel="stylesheet" type="text/css" href="../orris0/CSS/gallery-one-col.css">
+  <link rel="stylesheet" type="text/css" href="../orris0/CSS/gallery-one-col.css">
+  <link rel="stylesheet" type="text/css" href="../orris0/CSS/gallery-one-col.css">
+  <link rel="stylesheet" type="text/css" href="../orris0/CSS/gallery-one-col.css">
+
+  <link rel="icon" type="image/png" href="./flexy-logo.png">
+  <link rel="stylesheet" href="../jQuery-novice-to-ninja/css/base.css" type="text/css" media="screen" charset="utf-8">
+  <link rel="stylesheet" href="../../orris0/jQuery-novice-to-ninja/chapter_04/01_lightbox/lightbox.css" type="text/css" media="screen" charset="utf-8">
 
   <link rel="stylesheet" href="./style[1].css">
   <link rel="stylesheet" href="./nav[1].css">
@@ -24,32 +39,6 @@
 
   <link rel="stylesheet" href="../orris0/CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8">
   <link rel="stylesheet" href="../../orris0/jQuery-novice-to-ninja/chapter_04/01_lightbox/lightbox.css" type="text/css" media="screen" charset="utf-8">
-
-  <!-- <link rel="stylesheet" type="text/css" href="../orris0/CSS/nav-style.css"> -->
-  <!-- <link rel="stylesheet" type="text/css" href="../orris0/CSS/starter-page-style-2.css"> -->
-
-  <link rel="stylesheet" type="text/css" href="../orris0/CSS/gallery-one-col.css">
-  <link rel="stylesheet" type="text/css" href="../orris0/CSS/gallery-one-col.css">
-  <link rel="stylesheet" type="text/css" href="../orris0/CSS/gallery-one-col.css">
-  <link rel="stylesheet" type="text/css" href="../orris0/CSS/gallery-one-col.css">
-
-  <link rel="icon" type="image/png" href="./flexy-logo.png">
-  <link rel="stylesheet" href="../jQuery-novice-to-ninja/css/base.css" type="text/css" media="screen" charset="utf-8">
-  <link rel="stylesheet" href="../../orris0/jQuery-novice-to-ninja/chapter_04/01_lightbox/lightbox.css" type="text/css"
-    media="screen" charset="utf-8">
-
-  <link rel="stylesheet" href="./style[1].css">
-  <link rel="stylesheet" href="./nav[1].css">
-  <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-  <link rel="stylesheet" href="./font-awesome.min[1].css">
-
-  <link rel="stylesheet" href="../orris0/CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8">
-  <link rel="stylesheet" href="../../orris0/jQuery-novice-to-ninja/chapter_04/01_lightbox/lightbox.css" type="text/css"
-    media="screen" charset="utf-8">
-
-  <!-- <link rel="stylesheet" type="text/css" href="../orris0/CSS/nav-style.css"> -->
-  <!-- <link rel="stylesheet" type="text/css" href="../orris0/CSS/starter-page-style-2.css"> -->
 
   <link rel="stylesheet" type="text/css" href="../orris0/CSS/gallery-one-col.css">
   <link rel="stylesheet" type="text/css" href="../orris0/CSS/gallery-one-col.css">
