--- a/index[1].html
+++ b/index[1].html
@@ -14,7 +14,7 @@
 
   <link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8" />
   <link rel="stylesheet" href="lightbox.css" type="text/css" media="screen" charset="utf-8" />
-  
+
   <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
   <script type="text/javascript" src="script.js"></script>
   <link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8" />
@@ -26,7 +26,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
   <link rel="stylesheet" href="./font-awesome.min[1].css">
   <link rel="stylesheet" href="../orris0/CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8">
-  <link rel="stylesheet" href="../../orris0/jQuery-novice-to-ninja/chapter_04/01_lightbox/lightbox.css" type="text/css" media="screen" charset="utf-8">
+  <link rel="stylesheet" href="../../orris0/jQuery-novice-to-ninja/chapter_04/01_lightbox/lightbox.css" type="text/css"
+    media="screen" charset="utf-8">
   <link rel="stylesheet" type="text/css" href="../orris0/CSS/gallery-one-col.css">
   <link rel="stylesheet" type="text/css" href="../orris0/CSS/gallery-one-col.css">
   <link rel="stylesheet" type="text/css" href="../orris0/CSS/gallery-one-col.css">
@@ -34,7 +35,8 @@
 
   <link rel="icon" type="image/png" href="./flexy-logo.png">
   <link rel="stylesheet" href="../jQuery-novice-to-ninja/css/base.css" type="text/css" media="screen" charset="utf-8">
-  <link rel="stylesheet" href="../../orris0/jQuery-novice-to-ninja/chapter_04/01_lightbox/lightbox.css" type="text/css" media="screen" charset="utf-8">
+  <link rel="stylesheet" href="../../orris0/jQuery-novice-to-ninja/chapter_04/01_lightbox/lightbox.css" type="text/css"
+    media="screen" charset="utf-8">
 
   <link rel="stylesheet" href="./style[1].css">
   <link rel="stylesheet" href="./nav[1].css">
@@ -43,7 +45,8 @@
   <link rel="stylesheet" href="./font-awesome.min[1].css">
 
   <link rel="stylesheet" href="../orris0/CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8">
-  <link rel="stylesheet" href="../../orris0/jQuery-novice-to-ninja/chapter_04/01_lightbox/lightbox.css" type="text/css" media="screen" charset="utf-8">
+  <link rel="stylesheet" href="../../orris0/jQuery-novice-to-ninja/chapter_04/01_lightbox/lightbox.css" type="text/css"
+    media="screen" charset="utf-8">
 
   <link rel="stylesheet" type="text/css" href="../orris0/CSS/gallery-one-col.css">
   <link rel="stylesheet" type="text/css" href="../orris0/CSS/gallery-one-col.css">
@@ -218,12 +221,13 @@
       <div class="row" style="background-color: #3C8886; padding: 5% 0 3%;">
         <div class="çol-12">
           <img src="img/paper.png" ;>
-        
-        <p id="intro">
-          Welcome to <strong>StarTrackr!</strong> the planet's premier celebrity tracking and monitoring service. Need
-          to know where in the world the best bands, musicians or producers are within 2.2 square meters? You've come to
-          the right place. We have a very special special on B-grade celebs this week, so hurry in!
-        </p>
+
+          <p id="intro">
+            Welcome to <strong>StarTrackr!</strong> the planet's premier celebrity tracking and monitoring service. Need
+            to know where in the world the best bands, musicians or producers are within 2.2 square meters? You've come
+            to
+            the right place. We have a very special special on B-grade celebs this week, so hurry in!
+          </p>
         </div><!-- end-col-12 -->
 
       </div><!-- end-row -->
