--- a/index[1].html
+++ b/index[1].html
@@ -171,32 +171,30 @@
 
 <body>
   <div id="container">
-      <div class="wrapper">
-    <div class="row" id="header#html5style2header">
-      <div class="col-12">
-        <img class="logo" src="img/flexy-logo.png">
-      </div><!-- end-col-12 -->
-    </div><!-- end-header -->
-    <br class="clear">
+    <div class="wrapper">
+      <div class="row" id="header#html5style2header">
+        <div class="col-12">
+          <img class="logo" src="img/flexy-logo.png">
+        </div><!-- end-col-12 -->
+      </div><!-- end-header -->
+      <br class="clear">
 
-    <div class="row">
-      <div class="col-12">
-        <nav role="navigation" id="nav">
-          <input class="trigger" type="checkbox" id="mainNavButton">
-          <label for="mainNavButton" onclick>Menu</label>
-          <ul>
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="./index[1].html">About Us</a></li>
-            <li><a href="./membership.html">Products</a></li>
-            <li><a href="./news.html">Blog</a></li>
-            <li><a href="./starter-page.html">Specials</a></li>
-            <li><a href="./welcome.html">Contact</a></li>
-          </ul>
-        </nav>
-      </div><!-- col-12 -->
-    </div><!-- end-.row -->
-    <!-- <br class="clear"> -->
-    
+      <div class="row">
+        <div class="col-12">
+          <nav role="navigation" id="nav">
+            <input class="trigger" type="checkbox" id="mainNavButton">
+            <label for="mainNavButton" onclick>Menu</label>
+            <ul>
+              <li><a href="./index.html">Home</a></li>
+              <li><a href="./index[1].html">About Us</a></li>
+              <li><a href="./membership.html">Products</a></li>
+              <li><a href="./news.html">Blog</a></li>
+              <li><a href="./starter-page.html">Specials</a></li>
+              <li><a href="./welcome.html">Contact</a></li>
+            </ul>
+          </nav>
+        </div><!-- col-12 -->
+      </div><!-- end-.row -->
 
       <div class="row">
         <div class="çol-12">
@@ -258,15 +256,15 @@
         <div class="col-10">
           <h2>We're flying around the globe</h2>
           <div id="news">
-              <h2>Latest News</h2>
-              <p>
-                Which member of the seminal calypso/lectro band <em>C&amp;C Music Sweatshop</em> was spotted last night
-                at <em>Dirt</em>, the trendy New York restaurant that serves only food caught and retrieved by the
-                chef's own hands?
-                <span class="spoiler">Yes! It's the ever-effervescent, <em>Glendatronix</em>!</span>
-              </p>
-              <p>Who lost their recording contract today? <span class="spoiler">The Zaxntines!</span></p>
-            </div>
+            <h2>Latest News</h2>
+            <p>
+              Which member of the seminal calypso/lectro band <em>C&amp;C Music Sweatshop</em> was spotted last night
+              at <em>Dirt</em>, the trendy New York restaurant that serves only food caught and retrieved by the
+              chef's own hands?
+              <span class="spoiler">Yes! It's the ever-effervescent, <em>Glendatronix</em>!</span>
+            </p>
+            <p>Who lost their recording contract today? <span class="spoiler">The Zaxntines!</span></p>
+          </div>
           <div class="col-3">
             <img id="waves" class="circle" src="images/waves.png">
           </div><!-- end col-3 -->
@@ -277,67 +275,67 @@
         <div class="col-9">
           <h2>Above the clouds &amp; over the sea.</h2>
           <div>
-              <h2 class="heading">Our Celebrities</h2>
-              <p class="info">
-                We have an ever changing roster of newly chipped celebrities. But it can take as little as a week for
-                the little critters to realise they've been tagged - so you have to be fast!
-              </p>
-              <table class="data" id="celebs">
-                <thead>
-                  <tr>
-                    <th>ID</th>
-                    <th>Name</th>
-                    <th>Occupation</th>
-                    <th>Approx. Location</th>
-                    <th>Price</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td>203A</td>
-                    <td>Johny Stardust (<a href="bio.pdf">bio</a>)</td>
-                    <td>Front-man</td>
-                    <td>Los Angeles</td>
-                    <td>$39.95</td>
-                  </tr>
-                  <tr>
-                    <td>141B</td>
-                    <td>Beau Dandy (<a href="img.jpg">pic</a>,<a href="bio.pdf">bio</a>)</td>
-                    <td>Singer</td>
-                    <td>New York</td>
-                    <td>$39.95</td>
-                  </tr>
-                  <tr>
-                    <td>2031</td>
-                    <td>Mo' Fat (<a href="img.jpg">pic</a>)</td>
-                    <td>Producer</td>
-                    <td>New York</td>
-                    <td>$19.95</td>
-                  </tr>
-                  <tr>
-                    <td>007F</td>
-                    <td>Kellie Kelly (<a href="bio.pdf">bio</a>,<a href="w.doc">press</a>)</td>
-                    <td>Singer</td>
-                    <td>Omaha</td>
-                    <td>$11.95</td>
-                  </tr>
-                  <tr>
-                    <td>8A05</td>
-                    <td>Darth Fader (<a href="img.jpg">pic</a>)</td>
-                    <td>DJ</td>
-                    <td>London</td>
-                    <td>$19.95</td>
-                  </tr>
-                  <tr>
-                    <td>6636</td>
-                    <td>Glendatronix (<a href="bio.pdf">bio</a>,<a href="w.doc">press</a>)</td>
-                    <td>Keytarist</td>
-                    <td>London</td>
-                    <td>$39.95</td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
+            <h2 class="heading">Our Celebrities</h2>
+            <p class="info">
+              We have an ever changing roster of newly chipped celebrities. But it can take as little as a week for
+              the little critters to realise they've been tagged - so you have to be fast!
+            </p>
+            <table class="data" id="celebs">
+              <thead>
+                <tr>
+                  <th>ID</th>
+                  <th>Name</th>
+                  <th>Occupation</th>
+                  <th>Approx. Location</th>
+                  <th>Price</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>203A</td>
+                  <td>Johny Stardust (<a href="bio.pdf">bio</a>)</td>
+                  <td>Front-man</td>
+                  <td>Los Angeles</td>
+                  <td>$39.95</td>
+                </tr>
+                <tr>
+                  <td>141B</td>
+                  <td>Beau Dandy (<a href="img.jpg">pic</a>,<a href="bio.pdf">bio</a>)</td>
+                  <td>Singer</td>
+                  <td>New York</td>
+                  <td>$39.95</td>
+                </tr>
+                <tr>
+                  <td>2031</td>
+                  <td>Mo' Fat (<a href="img.jpg">pic</a>)</td>
+                  <td>Producer</td>
+                  <td>New York</td>
+                  <td>$19.95</td>
+                </tr>
+                <tr>
+                  <td>007F</td>
+                  <td>Kellie Kelly (<a href="bio.pdf">bio</a>,<a href="w.doc">press</a>)</td>
+                  <td>Singer</td>
+                  <td>Omaha</td>
+                  <td>$11.95</td>
+                </tr>
+                <tr>
+                  <td>8A05</td>
+                  <td>Darth Fader (<a href="img.jpg">pic</a>)</td>
+                  <td>DJ</td>
+                  <td>London</td>
+                  <td>$19.95</td>
+                </tr>
+                <tr>
+                  <td>6636</td>
+                  <td>Glendatronix (<a href="bio.pdf">bio</a>,<a href="w.doc">press</a>)</td>
+                  <td>Keytarist</td>
+                  <td>London</td>
+                  <td>$39.95</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
           <div class="col-3">
             <img id="plane" class="circle" src="images/plane.png">
           </div><!-- end col-3 -->
@@ -347,15 +345,15 @@
       <div class="row" style="background-color: #34495e;">
         <div class="col-8">
           <h2>In just 42 hours and 27 minutes</h2>
-           <div id="comment">
-              <h2>Leave a comment</h2>
-              name:<br>
-              <input type="text"><br>
-              comment:<br>
-              <textarea rows="5" cols="30" name="comment"></textarea>
-            </div>
+          <div id="comment">
+            <h2>Leave a comment</h2>
+            name:<br>
+            <input type="text"><br>
+            comment:<br>
+            <textarea rows="5" cols="30" name="comment"></textarea>
+          </div>
           <div class="col-3">
-            <img id="paper-blue" class="circle" src="images/paper-blue.png">   
+            <img id="paper-blue" class="circle" src="images/paper-blue.png">
           </div><!-- end col-3 -->
         </div><!-- end col-8 -->
       </div>
@@ -399,23 +397,22 @@
           </p>
         </div>
       </div>
-    </div>
-    <div id="footer">
 
-      <ul class="social">
-        <li><a href="#"><i class="fa fa-facebook"></i></i></a></li>
-        <li><a href="#"><i class="fa fa-google-plus"></i></i></a></li>
-        <li><a href="#"><i class="fa fa-twitter"></i></i></a></li>
-        <li><a href="#"><i class="fa fa-youtube"></i></i></a></li>
-        <li><a href="#"><i class="instagram"></i></i></a></li>
-      </ul>
-      <p>
-        &copy; Copyright 2010 CelebriTracker Productions
-      </p>
-    </div>
+      <div id="footer">
 
-  </div>
-  </div><!-- end-wrapper -->
+        <ul class="social">
+          <li><a href="#"><i class="fa fa-facebook"></i></i></a></li>
+          <li><a href="#"><i class="fa fa-google-plus"></i></i></a></li>
+          <li><a href="#"><i class="fa fa-twitter"></i></i></a></li>
+          <li><a href="#"><i class="fa fa-youtube"></i></i></a></li>
+          <li><a href="#"><i class="instagram"></i></i></a></li>
+        </ul>
+        <p>
+          &copy; Copyright 2010 CelebriTracker Productions
+        </p>
+      </div>
+    </div> <!-- end-wrapper-->
+  </div><!-- end-container -->
 </body>
 
 </html>
