--- a/index[1].html
+++ b/index[1].html
@@ -11,7 +11,12 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <!-- Viewport for responsive web design -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  <!-- slide_show -->
+  <link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8"/>	
+	<link rel="stylesheet" href="style.css" type="text/css" media="screen" charset="utf-8"/>
+  
+	<script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" ></script>
+	<script type="text/javascript" src="script.js"></script>
   <link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8" />
   <link rel="stylesheet" href="lightbox.css" type="text/css" media="screen" charset="utf-8" />
 
@@ -361,6 +366,22 @@
       <div class="row" style="background-color: #00afe1;">
         <div class="col-7">
           <h2>So come along for the ride!</h2>
+          <h2>Around town last night</h2>
+      <div id="photos">
+        <a href="#" class="trigger">Image Gallery</a>
+        <ul id="photos_inner">
+          <li><img alt="Glendatronix" src="../../images/glenda_400.jpg" /></li>
+          <li><img alt="Darth Fader" src="../../images/fader_400.jpg" /></li>
+          <li><img alt="Beau Dandy" src="../../images/beau_400.jpg" /></li>
+          <li><img alt="Johnny Stardust" src="../../images/johnny_400.jpg" /></li>
+          <li><img alt="Mo' Fat" src="../../images/mofat_400.jpg" /></li>
+          <li><img alt="Glendatronix" src="../../images/kellie_400.jpg" /></li>
+          <li><img alt="Darth Fader" src="../../images/fader_400.jpg" /></li>
+          <li><img alt="Beau Dandy" src="../../images/beau_400.jpg" /></li>
+          <li><img alt="Johnny Stardust" src="../../images/johnny_400.jpg" /></li>
+          <li><img alt="Mo' Fat" src="../../images/mofat_400.jpg" /></li>
+        </ul>
+      </div>
           <div class="col-3">
             <img id="globe" class="circle" src="images/globe.png" width="215px">
           </div>
