--- a/index[1].html
+++ b/index[1].html
@@ -209,7 +209,7 @@
 
       <div class="row">
         <div class="çol-12" padding="2%">
-          <h2 class="dark">Welcome to Flexy</h2>
+          <h2 class="dark">Practical HTML5 Projects for fun and Profit!</h2>
         </div><!-- end-col-12 -->
       </div><!-- end-row -->
 
@@ -227,7 +227,7 @@
           <img src="img/paper.png" ;>
 
           <p id="intro">
-            Practical HTML5 Projects for fun and Profit! <strong>StarTrackr!</strong> the planet's premier celebrity tracking and monitoring service. Need to know where in the world the best bands, musicians or producers are within 2.2 square meters? You've come
+          Welcome to <strong>StarTrackr!</strong> the planet's premier celebrity tracking and monitoring service. Need to know where in the world the best bands, musicians or producers are within 2.2 square meters? You've come
             to
             the right place. We have a very special special on B-grade celebs this week, so hurry in!
           </p>
