--- a/index[1].html
+++ b/index[1].html
@@ -433,6 +433,22 @@
       </div>
     </div> <!-- end-wrapper-->
   </div><!-- end-container -->
+
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="../orris0/aos.css"></script>
+    <script src="../orris0/bootstrap.bundle.min.js"></script>
+    <script src="../orris0/glightbox.min.js"></script>
+    <script src="../orris0/isotope.pkgd.min.js"></script>
+    <script src="../orris0/swiper-bundle.min.js"></script>
+    <script src="../orris0/validate.js"></script>
+    <!--jQuery JS-->
+    <script type="text/javascript" src="js/jquery-1.7.js"></script>
+    <script type="text/javascript" src="../orris0/js/script.js"></script>
+
+    <script src="https://use.fontawesome.com/c6d3fbeb1d.js"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073"
+        crossorigin="anonymous"></script>
+
 </body>
 
 </html>
